[gd_scene load_steps=6 format=3 uid="uid://ds8dl86sxnnvd"]

[ext_resource type="Script" path="res://scene/copilka.gd" id="1_f7fna"]
[ext_resource type="Texture2D" uid="uid://b88g8y8c05lbs" path="res://sprites/pig.png" id="1_ydg8c"]
[ext_resource type="FontFile" uid="uid://dpyg0bswiljy5" path="res://fonts/ofont.ru_Nunito.ttf" id="2_asdbs"]
[ext_resource type="Texture2D" uid="uid://dmq84uwc2r31v" path="res://sprites/button.png" id="3_i1vnt"]
[ext_resource type="Texture2D" uid="uid://decwyhgsrc821" path="res://sprites/dollar.png" id="5_mqfsf"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f7fna")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ydg8c")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -543.0
offset_top = -429.0
offset_right = 544.0
offset_bottom = -344.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_asdbs")
theme_override_font_sizes/font_size = 62
text = "Мои копилки"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bank" type="Sprite2D" parent="TextureRect"]
visible = false
position = Vector2(537, 1097.5)
scale = Vector2(1.53429, 1.5)
texture = ExtResource("5_mqfsf")

[node name="name" type="LineEdit" parent="TextureRect/bank"]
visibility_layer = 3
offset_left = -299.0
offset_top = -52.0
offset_right = -94.0
offset_bottom = 46.0
theme_override_fonts/font = ExtResource("2_asdbs")
theme_override_font_sizes/font_size = 36
placeholder_text = "название"
alignment = 1

[node name="price" type="LineEdit" parent="TextureRect/bank"]
offset_left = 94.0
offset_top = -50.0
offset_right = 312.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("2_asdbs")
theme_override_font_sizes/font_size = 36
placeholder_text = "цена"
alignment = 1
virtual_keyboard_type = 2

[node name="bank2" type="Sprite2D" parent="TextureRect"]
visible = false
position = Vector2(537, 1529)
scale = Vector2(1.53429, 1.5)
texture = ExtResource("5_mqfsf")

[node name="name" type="LineEdit" parent="TextureRect/bank2"]
visibility_layer = 3
offset_left = -299.0
offset_top = -52.0
offset_right = -94.0
offset_bottom = 46.0
theme_override_fonts/font = ExtResource("2_asdbs")
theme_override_font_sizes/font_size = 36
placeholder_text = "название"
alignment = 1

[node name="price" type="LineEdit" parent="TextureRect/bank2"]
offset_left = 94.0
offset_top = -50.0
offset_right = 312.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("2_asdbs")
theme_override_font_sizes/font_size = 36
placeholder_text = "цена"
alignment = 1
virtual_keyboard_type = 2

[node name="bank3" type="Sprite2D" parent="TextureRect"]
visible = false
position = Vector2(537, 1973)
scale = Vector2(1.53429, 1.5)
texture = ExtResource("5_mqfsf")

[node name="name" type="LineEdit" parent="TextureRect/bank3"]
visibility_layer = 3
offset_left = -299.0
offset_top = -52.0
offset_right = -94.0
offset_bottom = 46.0
theme_override_fonts/font = ExtResource("2_asdbs")
theme_override_font_sizes/font_size = 36
placeholder_text = "название"
alignment = 1

[node name="price" type="LineEdit" parent="TextureRect/bank3"]
offset_left = 94.0
offset_top = -50.0
offset_right = 312.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("2_asdbs")
theme_override_font_sizes/font_size = 36
placeholder_text = "цена"
alignment = 1
virtual_keyboard_type = 2

[node name="TextureButton" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -354.5
offset_top = -232.0
offset_right = 354.5
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
button_mask = 7
texture_normal = ExtResource("3_i1vnt")

[node name="Label" type="Label" parent="TextureRect/TextureButton"]
layout_mode = 0
offset_left = 27.0
offset_top = 85.0
offset_right = 688.0
offset_bottom = 270.0
theme_override_fonts/font = ExtResource("2_asdbs")
theme_override_font_sizes/font_size = 104
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="tb_two" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -354.5
offset_top = 172.0
offset_right = 354.5
offset_bottom = 515.0
grow_horizontal = 2
grow_vertical = 2
button_mask = 7
texture_normal = ExtResource("3_i1vnt")

[node name="Label" type="Label" parent="TextureRect/tb_two"]
layout_mode = 0
offset_left = 27.0
offset_top = 85.0
offset_right = 688.0
offset_bottom = 270.0
theme_override_fonts/font = ExtResource("2_asdbs")
theme_override_font_sizes/font_size = 104
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="tb_three" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -354.5
offset_top = 600.0
offset_right = 354.5
offset_bottom = 943.0
grow_horizontal = 2
grow_vertical = 2
button_mask = 7
texture_normal = ExtResource("3_i1vnt")

[node name="Label" type="Label" parent="TextureRect/tb_three"]
layout_mode = 0
offset_left = 27.0
offset_top = 85.0
offset_right = 688.0
offset_bottom = 270.0
theme_override_fonts/font = ExtResource("2_asdbs")
theme_override_font_sizes/font_size = 104
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="TextureRect/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureRect/tb_two" to="." method="_on_tb_two_pressed"]
[connection signal="pressed" from="TextureRect/tb_three" to="." method="_on_tb_three_pressed"]
